<resources>
    <string name="app_name">AMS</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">AMS</string>
    <string name="nav_header_subtitle">Airport Management System</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_dashboard">Dashboard</string>

    <string name="ams">AMS</string>
    <string name="airport_management_system">AIRPORT MANAGEMENT SYSTEM</string>
    <string name="location">LOCATION</string>
    <string name="flight_details">FLIGHT DETAILS</string>
    <string name="ticket_booking">TICKET BOOKING</string>
    <string name="inbox">INBOX</string>
    <string name="login">LOGIN</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="logout">LOGOUT</string>
    <string name="user_id">User ID</string>
    <string name="title_activity_location">Location</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="title_activity_flight_details">FlightDetails</string>

    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="ams_gmail_com">ams@gmail.com</string>
    <string name="facebook_page">Follow on Facebook</string>
    <string name="communication">Communication</string>
    <string name="nav_rate">Rate or Feedback</string>
    <string name="nav_share">Share</string>
    <string name="nav_privacy_policy">Privacy Policy</string>
    <string name="nav_terms_conditions">Terms and Conditions</string>
    <string name="website">Visit Website</string>
    <string name="more">More</string>


</resources>