<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="@string/menu_dashboard">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/menu_location"
                    android:icon="@drawable/ic_location"
                    android:title="@string/location" />
                <item
                    android:id="@+id/menu_flight"
                    android:icon="@drawable/ic_baseline_local_airport_24"
                    android:title="@string/flight_details" />
                <item
                    android:id="@+id/menu_ticket"
                    android:icon="@android:drawable/ic_menu_myplaces"
                    android:title="@string/ticket_booking" />
                <item
                    android:id="@+id/menu_inbox"
                    android:icon="@drawable/inbox__1_"
                    android:title="@string/inbox" />
            </group>
        </menu>
    </item>


    <item android:title="@string/communication">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/menu_rate"
                    android:icon="@drawable/ic_rate"
                    android:title="@string/nav_rate" />
                <item
                    android:id="@+id/menu_share"
                    android:icon="@drawable/ic_share"
                    android:title="@string/nav_share" />
                <item
                    android:id="@+id/menu_privacy_policy"
                    android:icon="@drawable/ic_privacy"
                    android:title="@string/nav_privacy_policy" />
                <item
                    android:id="@+id/menu_more"
                    android:icon="@drawable/ic_more"
                    android:title="@string/more" />
                <item
                    android:id="@+id/menu_login"
                    android:icon="@drawable/ic_baseline_login_24"
                    android:title="@string/login" />
                <item
                    android:id="@+id/menu_logout"
                    android:icon="@drawable/ic_baseline_close_24"
                    android:title="@string/logout" />

            </group>
        </menu>
    </item>
</menu>
