<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:fitsSystemWindows="true"
    tools:openDrawer="start" >


    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/nav_view_db"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/navigation_menu"
        android:layout_gravity="start"
        app:elevation="4dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/db_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#7A6C6C"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:navigationIcon="@drawable/ic_menu_icon"
            app:title="@string/menu_dashboard"
            app:titleTextColor="#FFFFFF" />


        <ScrollView
            android:id="@+id/home"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#171717"
            tools:context=".MainActivity">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#00FFFFFF"
                app:layout_constraintEnd_toStartOf="@+id/imageView"
                app:layout_constraintStart_toStartOf="@+id/imageView"
                tools:context=".ui.home.HomeFragment">

                <TextView
                    android:id="@+id/AMS"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="100dp"
                    android:background="#00FFFFFF"
                    android:text="@string/ams"
                    android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                    android:textColor="#FFFFFF"
                    android:textColorHighlight="#FFFFFF"
                    android:textColorHint="#FFFFFF"
                    android:textColorLink="#FFFFFF"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    app:fontFamily="sans-serif"
                    app:layout_constraintBottom_toTopOf="@+id/textView2"
                    app:layout_constraintEnd_toStartOf="@+id/imageView"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="AMS" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="196dp"
                    android:layout_height="33dp"
                    android:layout_marginStart="16dp"
                    android:background="#00FFFFFF"
                    android:text="@string/airport_management_system"
                    android:textColor="#FFFFFF"
                    android:textColorHighlight="#FFFFFF"
                    android:textColorHint="#FFFFFF"
                    android:textColorLink="#FFFFFF"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@+id/imageView"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/AMS" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="0dp"
                    android:layout_height="160dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:contentDescription="@android:string/untitled"
                    app:layout_constraintBottom_toTopOf="@+id/textView2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/AMS"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0"
                    app:srcCompat="@drawable/globe__3_" />

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="0dp"
                    android:layout_height="175dp"
                    android:layout_marginTop="40dp"
                    android:orientation="horizontal"
                    android:padding="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView">

                    <androidx.cardview.widget.CardView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:layout_weight="1">

                        <RelativeLayout
                            android:id="@+id/location"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="#222222">

                            <TextView
                                android:id="@+id/textView3"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@id/loc"
                                android:layout_centerHorizontal="true"
                                android:layout_marginTop="10dp"
                                android:contentDescription="@android:string/untitled"
                                android:text="@string/location"
                                android:textColor="#FFFFFF"
                                android:textColorHighlight="#FFFFFF"
                                android:textColorHint="#FFFFFF"
                                android:textColorLink="#FFFFFF"
                                android:textSize="18sp"
                                android:textStyle="bold"
                                app:fontFamily="sans-serif" />

                            <ImageView
                                android:id="@+id/loc"
                                android:layout_width="75dp"
                                android:layout_height="75dp"
                                android:layout_centerHorizontal="true"
                                android:layout_marginTop="15dp"
                                android:contentDescription="@android:string/untitled"
                                app:srcCompat="@drawable/map" />
                        </RelativeLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:layout_weight="1">

                        <RelativeLayout
                            android:id="@+id/flight1"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="#222222">

                            <TextView
                                android:id="@+id/textView4"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@id/flight"
                                android:layout_centerHorizontal="true"
                                android:layout_marginTop="10dp"
                                android:contentDescription="@android:string/untitled"
                                android:text="@string/flight_details"
                                android:textColor="#FFFFFF"
                                android:textColorHighlight="#FFFFFF"
                                android:textColorHint="#FFFFFF"
                                android:textColorLink="#FFFFFF"
                                android:textSize="18sp"
                                android:textStyle="bold"
                                app:fontFamily="sans-serif" />

                            <ImageView
                                android:id="@+id/flight"
                                android:layout_width="80dp"
                                android:layout_height="78dp"
                                android:layout_centerHorizontal="true"
                                android:layout_marginTop="15dp"
                                android:contentDescription="@string/flight_details"
                                app:srcCompat="@drawable/airplane__2_" />
                        </RelativeLayout>
                    </androidx.cardview.widget.CardView>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/linearLayout2"
                    android:layout_width="0dp"
                    android:layout_height="175dp"
                    android:layout_marginTop="30dp"
                    android:background="#00FFFFFF"
                    android:orientation="horizontal"
                    android:padding="10dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout"
                    app:layout_constraintVertical_bias="1.0">

                    <androidx.cardview.widget.CardView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:layout_weight="1">

                        <RelativeLayout
                            android:id="@+id/ticket1"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="#222222">

                            <TextView
                                android:id="@+id/textView6"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@id/ticket"
                                android:layout_centerHorizontal="true"
                                android:layout_marginTop="10dp"
                                android:contentDescription="@android:string/untitled"
                                android:text="@string/ticket_booking"
                                android:textColor="#FFFFFF"
                                android:textColorHighlight="#FFFFFF"
                                android:textColorHint="#FFFFFF"
                                android:textColorLink="#FFFFFF"
                                android:textSize="18sp"
                                android:textStyle="bold"
                                app:fontFamily="sans-serif" />

                            <ImageView
                                android:id="@+id/ticket"
                                android:layout_width="75dp"
                                android:layout_height="75dp"
                                android:layout_centerHorizontal="true"
                                android:layout_marginTop="15dp"
                                android:contentDescription="@android:string/untitled"
                                app:srcCompat="@drawable/plane_ticket__3_" />
                        </RelativeLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_margin="10dp"
                        android:layout_weight="1">

                        <RelativeLayout
                            android:id="@+id/inbox1"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="#222222">

                            <TextView
                                android:id="@+id/textView7"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@id/inbox"
                                android:layout_centerHorizontal="true"
                                android:layout_marginTop="10dp"
                                android:contentDescription="@android:string/untitled"
                                android:text="@string/inbox"
                                android:textColor="#FFFFFF"
                                android:textColorHighlight="#FFFFFF"
                                android:textColorHint="#FFFFFF"
                                android:textColorLink="#FFFFFF"
                                android:textSize="18sp"
                                android:textStyle="bold"
                                app:fontFamily="sans-serif" />

                            <ImageView
                                android:id="@+id/inbox"
                                android:layout_width="75dp"
                                android:layout_height="75dp"
                                android:layout_centerHorizontal="true"
                                android:layout_marginTop="15dp"
                                android:contentDescription="@string/inbox"
                                app:srcCompat="@drawable/inbox__1_" />
                        </RelativeLayout>
                    </androidx.cardview.widget.CardView>
                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </LinearLayout>

</androidx.drawerlayout.widget.DrawerLayout>